# sports-biomech-skills

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: examples.md  getting-started.md  musculoskeletal-modeling-guide.md  skills.md
scripts/: scan_skills.py  validate_skills.py
