[project]
name = "sports-biomech-skills"
version = "0.1.0"
description = "Curated skills for sports biomechanics and musculoskeletal modeling workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Yang Hsin" }
]
keywords = [
  "biomechanics",
  "sports-science",
  "motion-capture",
  "musculoskeletal-modeling",
  "markerless-motion-capture"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
